--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.4
 cachetools==4.1.0
-certifi==2020.4.5.1
+certifi==2020.4.5.2
 chardet==3.0.4
 colorama==0.4.3
 cycler==0.10.0
@@ -43,11 +43,13 @@ nbformat==5.0.6
 notebook==6.0.3
 numpy==1.18.4
 oauthlib==3.1.0
+olefile==0.46
 opt-einsum==3.2.1
 pandas==1.0.4
 pandocfilters==1.4.2
 parso==0.7.0
 pickleshare==0.7.5
+Pillow==7.1.2
 prometheus-client==0.7.1
 prompt-toolkit==3.0.4
 protobuf==3.12.2
@@ -89,4 +91,5 @@ Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wincertstore==0.2
 wrapt==1.12.1
+xlrd==1.2.0
 zipp==3.1.0
